Tue Feb 21 17:31:06 1995 Keith Vetter (keithv@fusion.com)

	* config.h: added HAVE_ERRNO for the windows section
           changed windows manifest constant from __windows__ 
           to _MSDOS so that DOS test programs will compile.

Tue Feb 21 12:00:32 1995 Keith Vetter (keithv@fusion.com)

	* asn1.h: added windows INTERFACE keyword to all functions.

Tue Feb 21 17:49:41 1995  Mark Eichin  (eichin@cygnus.com)

	* config.h: get krb5/autoconf.h.
	* Makefile.in (KRB5_HEADERS): add config.h, remove rsa-md4.h and
	crc-32.h which aren't here anymore.

Tue Feb 21 0:0:32 1995 Keith Vetter (keithv@fusion.com)

	* func-proto.h: added windows INTERFACE keyword to all functions.
        * krb5.h: moved two typedefs before inclusion of func-proto.h

Mon Feb 20 16:54:51 1995 Keith Vetter (keithv@fusion.com)

	* encryption.h, los-proto.h, rsa-md5.h: added windows 
          INTERFACE keyword.
        * Makefile.in: removed isode cruft ala Feb 10 changes but for windows

Mon Feb 20 12:32:34 1995  John Gilmore  (gnu at toad.com)

	* configure.in:  Flip again.  Use AC_CHECK_HEADERS, but default the
	symbol-setting.  This is Modern Autoconf Style.

	* config.h:  Create from stock/config.h and stock/config.win.
	* Makefile.in (BUILT_HEADERS):  Remove config.h.
	(CONF_REPLACE, CONFSRC, config.h rule):  Remove.  Config.h is
	a static header file, ever since imake died.  Now it really is.
	(clean):  Don't remove config.new any more.

Thu Feb 16 20:12:23 1995  John Gilmore  (gnu at toad.com)

	* configure.in:  Use AC_HAVE_HEADER rather than AC_HEADER_CHECK.
	(Fixes resulting #define names to HAVE_XXX rather than HAS_XXX,
	which is not only consistent but also matches what's in sysincl.h.)

Mon Feb 6 19:42:7 1995 Keith Vetter (keithv@fusion.com)

        * configure.in: added header checks for sys/param.h and sys/file.h.
        * encryption.h: added typedef prototype for sum_func function 
            with the windows api to make microsoft compiler happy.