@@ -32,7 +32,7 @@
 
 #include "ktfile.h"
 
-krb5_error_code
+krb5_error_code INTERFACE
 krb5_ktfile_get_entry(context, id, principal, kvno, keytype, entry)
    krb5_context context;
    krb5_keytab id;
