@@ -30,7 +30,7 @@
 
 #include "ktfile.h"
 
-krb5_error_code
+krb5_error_code INTERFACE
 krb5_ktfile_remove(context, id, entry)
     krb5_context context;
 krb5_keytab id;
