@@ -1,3 +1,8 @@
+Wed Feb 22 01:38:54 1995 Keith Vetter (keithv@fusion.com)
+
+	* Makefile.in: made to work on the PC
+        * *.c: added windows INTERFACE keyword
+
 Fri Jan 13 15:23:47 1995  Chris Provenzano (proven@mit.edu)
 
 	* read_servi.c (krb5_kt_read_service_key) Add krb5_keytype arg.
